se elimino bola de energia

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <a id="btn-versus" href=""><img src="./img/versus.png" width="100" height="100"
-                    class="mt-5 mb-5 imagen-versus"></a>
+                        class="mt-5 mb-5 imagen-versus"></a>
             </div>
         </div>
         <div class="row mt-5">
@@ -45,9 +45,9 @@
             </div>
             <div class="col-md-4 pt-5 text-center">
                 <h5 id="nombre_ataque"></h5>
-                <div id="loader"></div>
-                <img id="imagen_poder" src="" alt="" width="100" height="100">
-                <h4><span id="poder_ataque" class="badge badge-pill badge-danger"></span></h4>
+                <div id="loader">
+                </div>
+                <h4><span id="poder_ataque" class="badge badge-pill badge-danger mt-5"></span></h4>
             </div>
             <div id="pokemon_2" class="col-md-4 text-left">
                 <div class="row">
@@ -58,7 +58,7 @@
                         <img src="./img/silueta_pokemon_2.png" id="img-pokemon-2" alt="pokemon_2" width="200"
                             height="150">
                     </div>
-                    <div id="datos_pokemon_2"  hidden="true" class="col-md-12">
+                    <div id="datos_pokemon_2" hidden="true" class="col-md-12">
                         <div class="col-md-12">
                             <p class="pl-5">Vida: <span id="healt_pokemon_2"
                                     class="badge badge-pill badge-success w-50"></span></p>
