--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             <div id="pokemon_1" class="col-md-4 text-right">
                 <div class="row">
                     <div class="col-md-12">
-                        <h6 id="nombre-pokemon-1" class="mr-5 pr-5"></h6>
+                        <h6 id="nombre-pokemon-1" class="mr-5 pr-5 mt-4"></h6>
                     </div>
-                    <div class="col-md-12">
+                    <div id="loader_1">
+                    </div>
+                    <div id="contenedor_img_pokemon_1" class="col-md-12">
                         <img src="./img/silueta_pokemon_2.png" id="img-pokemon-1" alt="pokemon_1" width="200"
                             height="150">
                     </div>
@@ -38,7 +40,7 @@
                                     class="badge badge-pill badge-success w-50"></span></p>
                         </div>
                         <div class="col-md-12">
-                            <button id="btn_ataque_pokemon_1" class="btn btn-info btn-block btn-lg">Atacar</button>
+                            <button id="btn_ataque_pokemon_1" class="btn btn-info btn-block btn-lg mb-4">Atacar</button>
                         </div>
                     </div>
                 </div>
@@ -47,14 +49,16 @@
                 <h5 id="nombre_ataque"></h5>
                 <div id="loader">
                 </div>
-                <h4><span id="poder_ataque" class="badge badge-pill badge-danger mt-5"></span></h4>
+                <h4><span id="poder_ataque" class="badge badge-pill badge-danger mt-4"></span></h4>
             </div>
             <div id="pokemon_2" class="col-md-4 text-left">
                 <div class="row">
                     <div class="col-md-12">
-                        <h6 id="nombre-pokemon-2" class="ml-5 pl-5"></h6>
+                        <h6 id="nombre-pokemon-2" class="ml-5 pl-5 mt-4"></h6>
                     </div>
-                    <div class="col-md-12">
+                    <div id="loader_2">
+                    </div>
+                    <div id="contenedor_img_pokemon_2" class="col-md-12">
                         <img src="./img/silueta_pokemon_2.png" id="img-pokemon-2" alt="pokemon_2" width="200"
                             height="150">
                     </div>
@@ -64,7 +68,7 @@
                                     class="badge badge-pill badge-success w-50"></span></p>
                         </div>
                         <div class="col-md-12">
-                            <button id="btn_ataque_pokemon_2" class="btn btn-info btn-block btn-lg">Atacar</button>
+                            <button id="btn_ataque_pokemon_2" class="btn btn-info btn-block btn-lg mb-4">Atacar</button>
                         </div>
                     </div>
                 </div>
